--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ Thumbs.db
 **/*_bkp*
 packages/Mathematica/cohomCalg
 packages/Mathematica/MongoLink/*.jar
+packages/python/**/*.egg-info
+packages/python/**/filessage.txt
+packages/python/**/filespy.txt
+packages/python/**/dist
+packages/python/**/build
+**/*.pyc
