Updated mongolink to mongojoin.

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,10 @@ Thumbs.db
 **/Thumbs.db
 *_bkp*
 **/*_bkp*
-packages/Mathematica/cohomCalg
-packages/Mathematica/MongoLink/*.jar
-packages/python/**/*.egg-info
-packages/python/**/filessage.txt
-packages/python/**/filespy.txt
-packages/python/**/dist
-packages/python/**/build
-**/*.pyc
+api/Mathematica
+api/**/*.egg-info
+api/**/filessage.txt
+api/**/filespy.txt
+api/**/dist
+api/**/build
+api/**/*.pyc
