Fixed threading issue.

--- a/crunch.config
+++ b/crunch.config
@@ -34,6 +34,7 @@ software:
             - 'MathLink could not create temporary directory'
             - 'The program may not function correctly'
 
-# Global maxima
+# Global extrema
 max-jobs: 500
 max-steps: 
+min-threads: 4
