--- a/crunch.config
+++ b/crunch.config
@@ -7,7 +7,7 @@ resources:
     ser-par-10g-2: 64000000000
     ser-par-10g-3: 128000000000
     ser-par-10g-4: 128000000000
-    ser-par-10g-5: 256000000000
+    #ser-par-10g-5: 256000000000
     largemem-10g: 384000000000
 
 # Installed software
