--- a/crunch.config
+++ b/crunch.config
@@ -1,41 +1,54 @@
-# System workload manager type
-workload-manager: slurm
+# System workload manager
+wm: 
+    api: "wm_slurm"
 
 # Partition/Queue resources (Name: RAM in bytes)
 resources:
-    ser-par-10g: 128000000000
-    ser-par-10g-2: 64000000000
-    ser-par-10g-3: 128000000000
-    ser-par-10g-4: 128000000000
-    #ser-par-10g-5: 256000000000
-    largemem-10g: 384000000000
+    ser-par-10g: 
+        memorylimit: 128000000000
+    ser-par-10g-2: 
+        memorylimit: 64000000000
+    ser-par-10g-3: 
+        memorylimit: 128000000000
+    ser-par-10g-4: 
+        memorylimit: 128000000000
+    #ser-par-10g-5: 
+        #memorylimit: 256000000000
+    #largemem-10g: 
+        #memorylimit: 384000000000
 
 # Installed software
 software:
     bash:
-        extension: .bash
+        extension: ".bash"
     python:
-        extension: .py
-        command: python
+        extension: ".py"
+        command: "python"
     sage:
-        extension: .py
-        command: sage
-        ignored-strings:
-            - 'Singular crashed -- automatically restarting.'
+        extension: ".py"
+        command: "sage"
+        ignore:
+            - "Singular crashed -- automatically restarting."
     mathematica:
-        extension: .m
-        command: math
-        license-command: mathematica_licenses
-        sublicense-command: mathematica_sublicenses
+        extension: ".m"
+        command: "math"
         flags:
-            - '-noprompt'
-            - '-script'
-        ignored-strings:
-            - 'MathLink could not create temporary directory'
-            - 'The program may not function correctly'
+            - "-noprompt"
+            - "-script"
+        licenses: "/home/altman.ro/opt/bin/mathematica_licenses"
+        sublicenses: "/home/altman.ro/opt/bin/mathematica_sublicenses"
+        ignore:
+            - "MathLink could not create temporary directory"
+            - "The program may not function correctly"
 
-# Global extrema
-max-jobs: 500
-max-steps: 
-min-controller-threads: 4
-min-job-threads: 4
+# Controller info
+controller:
+    threads:
+        min: 4
+
+# Job info
+job:
+    jobs:
+        max: 500
+    threads:
+        min: 5
