--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ Thumbs.db
 *_bkp*
 **/*_bkp*
 api/Mathematica
+api/**/*.egg-info
+api/**/filessage.txt
+api/**/filespy.txt
+api/**/dist
+api/**/build
+api/**/*.pyc
+api/**/mongojoin
 api/**/**/*.egg-info
 api/**/**/filessage.txt
 api/**/**/filespy.txt
