Minor bug fixes.

--- a/crunch.config
+++ b/crunch.config
@@ -1,6 +1,6 @@
 # System workload manager
 wm: 
-    api: "wm_slurm"
+    api: "slurm"
 
 # Partition/Queue resources (Name: RAM in bytes)
 resources:
