--- a/crunch.config
+++ b/crunch.config
@@ -6,12 +6,12 @@ wm:
 resources:
     ser-par-10g: 
         memorylimit: 128000000000
-    #ser-par-10g-2: 
-    #    memorylimit: 64000000000
+    ser-par-10g-2: 
+        memorylimit: 64000000000
     ser-par-10g-3: 
         memorylimit: 128000000000
     ser-par-10g-4: 
-        memorylimit: 128000000000
+       memorylimit: 128000000000
     #ser-par-10g-5: 
         #memorylimit: 256000000000
     #largemem-10g: 
@@ -51,4 +51,4 @@ job:
     jobs:
         max: 500
     threads:
-        min: 6
+        min: 7
