Split db config into input and output database information.

--- a/crunch.config
+++ b/crunch.config
@@ -10,8 +10,8 @@ resources:
     #     memorylimit: 64000000000
     ser-par-10g-3: 
         memorylimit: 128000000000
-    # ser-par-10g-4: 
-    #    memorylimit: 128000000000
+    ser-par-10g-4: 
+       memorylimit: 128000000000
     #ser-par-10g-5: 
         #memorylimit: 256000000000
     #largemem-10g: 
