--- a/crunch.config
+++ b/crunch.config
@@ -8,10 +8,10 @@ resources:
         memorylimit: 128000000000
     # ser-par-10g-2: 
     #     memorylimit: 64000000000
-    ser-par-10g-3: 
-        memorylimit: 128000000000
-    ser-par-10g-4: 
-       memorylimit: 128000000000
+    # ser-par-10g-3: 
+    #     memorylimit: 128000000000
+    # ser-par-10g-4: 
+    #    memorylimit: 128000000000
     #ser-par-10g-5: 
         #memorylimit: 256000000000
     #largemem-10g: 
