--- a/crunch.config
+++ b/crunch.config
@@ -10,8 +10,8 @@ resources:
     #     memorylimit: 64000000000
     # ser-par-10g-3: 
     #     memorylimit: 128000000000
-    # ser-par-10g-4: 
-    #    memorylimit: 128000000000
+    ser-par-10g-4: 
+       memorylimit: 128000000000
     #ser-par-10g-5: 
         #memorylimit: 256000000000
     #largemem-10g: 
@@ -51,4 +51,4 @@ job:
     jobs:
         max: 500
     threads:
-        min: 8
+        min: 6
