Chaining controller dependencies now works as expected.

--- a/crunch.config
+++ b/crunch.config
@@ -6,10 +6,10 @@ wm:
 resources:
     ser-par-10g: 
         memorylimit: 128000000000
-    # ser-par-10g-2: 
-    #     memorylimit: 64000000000
-    # ser-par-10g-3: 
-    #     memorylimit: 128000000000
+    ser-par-10g-2: 
+        memorylimit: 64000000000
+    ser-par-10g-3: 
+        memorylimit: 128000000000
     ser-par-10g-4: 
        memorylimit: 128000000000
     #ser-par-10g-5: 
